Added Delete User API
