# backend/openapi.yaml
@@ -5,9 +5,22 @@ info:
         email: imohamedelshamy@gmail.com
     version: 1.0.1
 servers:
-    - url: https://cjyzhu7lw2.execute-api.eu-central-1.amazonaws.com/dev
     - url: http://localhost:8080
+    - url: https://cjyzhu7lw2.execute-api.eu-central-1.amazonaws.com/dev
 paths:
+    /user:
+        delete:
+            tags:
+                - User
+            summary: deletes a user
+            responses:
+                "200":
+                    description: Created
+                "500":
+                    description: Internal server error
+            security:
+                - bearerAuth: []
+
     /signup:
         post:
             tags:
